--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,10 +59,6 @@ h1 {
 
 }
 
-.photographer-card img {
-
-}
-
 #photographers-list {
     display: flex;
     flex-wrap: wrap;
@@ -96,4 +92,12 @@ h1 {
 .price-photographer{
     display: flex;
     justify-content: center;
+}
+
+.photographer-card img{
+    width: 200px;
+    height: 200px;
+    border: none;
+    outline: none;
+    border-radius: 50%; /* Rend l'image ronde */
 }
