--- a/src/css/photographer.css
+++ b/src/css/photographer.css
@@ -11,6 +11,8 @@
     background-color: #FAFAFA;
     height: 300px;
     margin: 0 100px;
+    display: flex;
+    flex-direction: row;
 }
 
 .contact_button {
@@ -78,4 +80,11 @@ form input {
     height: 68px;
     border: none;
     border-radius: 5px;
+}
+
+photographers-banner {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    text-wrap: nowrap;
 }
