--- a/src/css/photographer.css
+++ b/src/css/photographer.css
@@ -55,19 +55,19 @@
     text-align: center;
 }
 
-form {
+.form {
     display: flex;
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
 }
 
-form label {
+.form label {
     color: #312E2E;
     font-size: 36px;
 }
 
-form div {
+.form div {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -75,16 +75,53 @@ form div {
     margin-bottom: 26px;
 }
 
-form input {
+.form input {
     width: 100%;
     height: 68px;
     border: none;
     border-radius: 5px;
 }
 
-photographers-banner {
+.photographers-banner {
     display: flex;
     flex-direction: column;
     gap: 15px;
     text-wrap: nowrap;
 }
+
+#container-photo{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 45px;
+    justify-content: center;
+    margin: 20px;
+}
+
+.photo_form{
+    display: flex;
+    align-items: center;
+    padding: 50px 8%;
+}
+
+.picture-container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+}
+.picture-details{
+    display: flex;
+    justify-content: space-between;
+}
+
+.picture-likes{
+    margin-left: 35px;
+}
+
+.picture-image{
+    width: 350px;
+    height: 300px;
+}
+
+
+
