--- a/src/css/photographer.css
+++ b/src/css/photographer.css
@@ -13,6 +13,7 @@
     margin: 0 100px;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 .contact_button {
@@ -89,6 +90,11 @@
     text-wrap: nowrap;
 }
 
+.photographers-image {
+    display: flex;
+    flex-direction: row;
+}
+
 #container-photo{
     display: flex;
     flex-wrap: wrap;
@@ -107,7 +113,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-
+width: 600px;
 }
 .picture-details{
     display: flex;
@@ -127,5 +133,6 @@
 .picture-video{
     width: 350px;
 }
+
 
 
