--- a/src/css/photographer.css
+++ b/src/css/photographer.css
@@ -98,8 +98,8 @@
 #container-photo{
     display: flex;
     flex-wrap: wrap;
-    gap: 45px;
-    justify-content: center;
+    gap: 20px;
+    justify-content: left;
     margin: 20px;
 }
 
@@ -113,12 +113,14 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-width: 600px;
+    width: 600px;
 }
 .picture-details{
     display: flex;
     justify-content: space-between;
-    width: 100px;
+    width: 580px;
+    font-size: xx-large;
+    color: #901C1C;
 }
 
 .picture-likes{
@@ -134,5 +136,7 @@ width: 600px;
     width: 350px;
 }
 
+.banner-style{
 
+}
 
