--- a/src/css/photographer.css
+++ b/src/css/photographer.css
@@ -185,6 +185,22 @@
 .detail-like{
     margin-right: 20px;
 }
+
+
+#nav-bar{
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: end;
+    gap: 30px;
+    padding-right: 20px;
+    /* padding-top: 40px; */
+    border-style: double;
+    width: 200px;
+    bottom: 0px;
+    right: 0px;
+    position: fixed;
+}
+
 /*width: 200px;*/
 /*    height: 230px;*/
 /*    object-fit: cover;*/
