--- a/src/css/photographer.css
+++ b/src/css/photographer.css
@@ -207,4 +207,20 @@
 /*    display:  block;*/
 /*    overflow: hidden;*/
 
+.column-sort{
 
+}
+
+.title-sort{
+
+}
+
+.sort-class{
+    display: flex;
+    flex-direction: row;
+    gap: 38px;
+}
+
+#sort-like{
+
+}
